@@ -2,6 +2,7 @@ package com.pi4j.example;
 
 import com.pi4j.Pi4J;
 import com.pi4j.context.Context;
+import com.pi4j.example.applications.ADS1115_App;
 import com.pi4j.example.applications.Joystick_App;
 import com.pi4j.example.applications.SimpleButton_App;
 import com.pi4j.example.applications.SimpleLED_App;
@@ -18,7 +19,6 @@ import picocli.CommandLine.Command;
 import picocli.CommandLine.Model.CommandSpec;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Command(name = "Raspberry Pi Example Launcher", version = "1.0.0", mixinStandardHelpOptions = true)
 public final class Launcher implements Runnable {
@@ -29,7 +29,8 @@ public final class Launcher implements Runnable {
     public static final List<Application> APPLICATIONS = new ArrayList<>(Arrays.asList(
         new SimpleButton_App(),
         new Joystick_App(),
-        new SimpleLED_App()
+        new SimpleLED_App(),
+            new ADS1115_App()
     ));
 
     /**
@@ -117,7 +118,7 @@ public final class Launcher implements Runnable {
                             PiGpioSerialProvider.newInstance(piGpio),
                             PiGpioSpiProvider.newInstance(piGpio)
                     )
-                    .build();;
+                    .build();
             // Run the application
             getTargetInteractively(targets).run();
             // Clean up
@@ -169,12 +170,11 @@ public final class Launcher implements Runnable {
 
         // Append list of application targets
         targets.addAll(this.runners.stream()
-            .map(runner -> {
-                final var runnerApp = runner.getApp();
-                final var runnerLabel = runnerApp.getName() + " (" + runnerApp.getDescription() + ")";
-                return new Target(runnerLabel, runner);
-            })
-            .collect(Collectors.toList()));
+                .map(runner -> {
+                    final var runnerApp = runner.getApp();
+                    final var runnerLabel = runnerApp.getName() + " (" + runnerApp.getDescription() + ")";
+                    return new Target(runnerLabel, runner);
+                }).toList());
 
         return targets;
     }
